@@ -1,5 +1,4 @@
 * investigate using App::Cmd
-* ensure (with a test) that dependency lists are indented with one space
 * --refresh on MIME-Charset 1.007 can't detect the dist name and cries.
   May be similar to #525847
 * when ITP for the package is found, try to deduce short/long description from
