@@ -7,6 +7,8 @@
 
     My::Builder: streamline messages in the 'dist' and 'orig' actions
 
+    Control.t: ensure dependency fields are wrapped properly
+
 0.67
     POD: drop "--" in front of the commands.
     refresh: ensure ->rules is there before attempting to fiddle quilt
